# wnet

./: CMakeLists.txt  README.md  example.py  pyproject.toml  reinstall.sh
.github/workflows/: build_wheels.yml  run_tests.py  run_tests.yml
src/wnet/: __init__.py  distances.py  distribution.py  wasserstein.py  wasserstein_network.py
src/wnet/cpp/wnet/: decompositable_graph.hpp  distribution.hpp  graph_elements.hpp  misc.hpp  wnet.cpp
tests/: test_bigint.py  test_compare.py  test_decompositable.py
