[build-system]
requires = ["scikit-build-core", "nanobind", "pylmcf"]
build-backend = "scikit_build_core.build"

[project]
name = "wnet"
version = "0.0.1"
description = "Tools for calculation of Wasserstein metric between distributions based on Network Flow algorithm"
authors = [
    { name="Michał Startek", email="michal.startek@mimuw.edu.pl" }
]
dependencies = ["pylmcf"]
